--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Lista de compras!</title>
+    <title>FRUTAS MASTER</title>
+    <script type ="text/javascript" src="asset/js/javascript.js"></script> 
   </head>
   <body>
-      <h1>BIENVENIDOS</h1>
-      <h1>Lista de compras!</h1>
-      <button id="nuevacompra" type="button" name="button">Añadir Nueva compra</button>
-  <script src="js/javascript.js"></script>
   </body>
 </html>
