--- a/index.html
+++ b/index.html
@@ -5,5 +5,11 @@
     <script type ="text/javascript" src="asset/js/javascript.js"></script> 
   </head>
   <body>
+    <h1>LISTA DE FRUTAS</h1>
+    <p>Frutas Master es un empresa familiar de tercera generación que se dedica a la compra, venta y distribución de frutos al pro mayor: <br> en la actualidad, somos la empresa líder en el servicio de distribución de frutas.</p>
+    <form>
+      <input type="text" placeholder="Contraseña" id="input-contrasena" /><br>
+      <input type="button" value="Agregar" id="agregar"/><p id="resultado"></p>
+    </form>
   </body>
 </html>
