en el html se agrego el catalogo y la imagen

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   <body>
     <h1>LISTA DE FRUTAS</h1>
     <p>Frutas Master es un empresa familiar de tercera generación que se dedica a la compra, venta y distribución de frutos al pro mayor: <br> en la actualidad, somos la empresa líder en el servicio de distribución de frutas.</p>
+    <img src="img/frutas.png">
+    <h3>Catálogo:</h3>
+    <OL>
+      <LI> Manzana
+      <LI> Pera
+      <LI> Piña
+      <LI> Cereza
+      <LI> Naranja
+    </OL>
     <form>
       <input type="text" placeholder="Contraseña" id="input-contrasena" /><br>
       <input type="button" value="Agregar" id="agregar"/><p id="resultado"></p>
